# automation_tool

./: README.md  pyproject.toml
automation_tool/: README.md  app.py  automation.py  index.html  main.py  pyproject.toml  requirements.txt  script.js  style.css
src/automation_tool/: __init__.py
